# offject

./: .gitignore  README.md  offject.py  offject_thumb_bin.py  projcreate.py  pyproject.toml  requirements.txt
src/offject/: __init__.py  __main__.py  cli.py  repl.py
src/offject/binary/: __init__.py  parser.py  raw.py
src/offject/core/: __init__.py  architectures.py  assembler.py  disassembler.py  patcher.py
src/offject/scripts/: __init__.py  loader.py  saver.py
src/offject/ui/: __init__.py  completer.py  console.py  hexview.py
src/offject/utils/: __init__.py  helpers.py
